<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/fi_rs_home"
        android:title="@string/title_home" />

    <item
        android:id="@+id/navigation_courses"
        android:icon="@drawable/fi_rs_graduation_cap"
        android:title="@string/title_courses" />

    <item
        android:id="@+id/navigation_contacts"
        android:icon="@drawable/fi_rs_address_book"
        android:title="@string/title_contacts" />

    <item
        android:id="@+id/navigation_mission"
        android:icon="@drawable/fi_rs_users"
        android:title="@string/title_mission" />

    <item
        android:id="@+id/navigation_privacy"
        android:icon="@drawable/fi_rs_shield_exclamation"
        android:title="@string/title_privacy" />

</menu>