<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        style="@style/Theme.IarosInternational.CardView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TableLayout
                android:id="@+id/tableLayout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginVertical="10dp">

                    <ImageView
                        android:id="@+id/bottone"
                        style="@style/Theme.IarosInternational.Icon"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        app:srcCompat="@drawable/fi_rs_link_alt" />

                    <TextView
                        android:id="@+id/contatti_pagina"
                        android:layout_width="match_parent"
                        android:layout_height="60dp"
                        android:layout_marginVertical="10dp"
                        android:layout_marginStart="5dp"
                        android:layout_weight="1"
                        android:gravity="center|start"
                        android:text="@string/contatti_pagina"
                        android:textSize="20sp"
                        android:textStyle="normal" />

                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginVertical="10dp">

                    <ImageView
                        android:id="@+id/imageView"
                        style="@style/Theme.IarosInternational.Icon"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        app:srcCompat="@drawable/fi_rs_marker" />

                    <TextView
                        android:id="@+id/contatti_address"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="5dp"
                        android:text="@string/contatti_address"
                        android:textSize="20sp" />
                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginVertical="10dp">

                    <ImageView
                        android:id="@+id/imageView3"
                        style="@style/Theme.IarosInternational.Icon"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        app:srcCompat="@drawable/fi_rs_phone_call" />

                    <TextView
                        android:id="@+id/contatti_phone"
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:layout_marginLeft="5dp"
                        android:layout_weight="1"
                        android:gravity="center|center_horizontal|start"
                        android:text="@string/contatti_phone"
                        android:textSize="20sp"
                        android:textStyle="normal" />

                </TableRow>

                <TableRow
                    android:id="@+id/contacts_email"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginVertical="10dp">

                    <ImageView
                        android:id="@+id/imageView4"
                        style="@style/Theme.IarosInternational.Icon"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_weight="1"
                        app:srcCompat="@drawable/fi_rs_at" />

                    <TextView
                        android:id="@+id/contatti_email"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginVertical="10dp"
                        android:layout_marginLeft="5dp"
                        android:layout_weight="1"
                        android:gravity="center|center_horizontal|left"
                        android:text="@string/contatti_email"
                        android:textSize="20sp"
                        android:textStyle="normal" />
                </TableRow>

            </TableLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="30dp"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/contatti_face"
                    android:layout_width="35dp"
                    android:layout_height="35dp"
                    android:layout_weight="1"
                    app:srcCompat="@drawable/fi_brands_facebook" />

                <ImageView
                    android:id="@+id/contatti_social"
                    android:layout_width="35dp"
                    android:layout_height="35dp"
                    android:layout_weight="1"
                    app:srcCompat="@drawable/fi_brands_instagram" />
            </LinearLayout>
        </LinearLayout>

    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>